Cambios en el menu

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
             <button type="submit" class="login-button">Iniciar Sesión</button>
         </form>
 
-        <div class="signup-link">
-            ¿No tienes cuenta? <a href="">Regístrate aquí</a>
-        </div>
+        <!-- Registration link removed -->
     </div>
 </body>
 
