--- a/tarjetas.html
+++ b/tarjetas.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Menu</title>
+    <title>Tarjetas</title>
     <link rel="stylesheet" href="panel.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -29,7 +29,7 @@
             </div>
             <ul class="mobile-menu-items">
                 <li>
-                    <a class="active" href="panel.html">
+                    <a href="panel.html">
                         <i class='bx bx-group'></i>
                         <span>Usuarios</span>
                     </a>
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tarjetas.html">
+                    <a class="active" href="tarjetas.html">
                         <i class='bx bx-credit-card'></i>
                         <span>Tarjetas</span>
                     </a>
@@ -74,7 +74,7 @@
         </div>
         <ul class="nav-list">
             <li>
-                <a class="active" href="panel.html">
+                <a href="panel.html">
                     <i class='bx bx-group'></i>
                     <span class="links_name">Usuarios</span>
                 </a>
@@ -88,7 +88,7 @@
                 <span class="tooltip">Estudiantes</span>
             </li>
             <li>
-                <a href="tarjetas.html">
+                <a class="active" href="tarjetas.html">
                     <i class='bx bx-credit-card'></i>
                     <span class="links_name">Tarjetas</span>
                 </a>
@@ -113,76 +113,66 @@
         </ul>
     </div>
     <section class="home-section">
-        <div class="text">Usuarios</div>
+        <div class="text">Tarjetas</div>
         <div class="table-container">
             <table class="user-table">
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Correo Electrónico</th>
-                        <th>Contraseña</th>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
+                        <th>Número de Tarjeta</th>
+                        <th>Estudiante</th>
+                        <th>Estado</th>
+                        <th>Fecha de Emisión</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>admin@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Juan</td>
-                        <td>Pérez</td>
+                        <td>T-001-2023</td>
+                        <td>Carlos Rodríguez</td>
+                        <td>Activa</td>
+                        <td>01/03/2023</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>maria.garcia@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>María</td>
-                        <td>García</td>
+                        <td>T-002-2023</td>
+                        <td>María González</td>
+                        <td>Activa</td>
+                        <td>15/03/2023</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>carlos.lopez@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Carlos</td>
-                        <td>López</td>
+                        <td>T-003-2023</td>
+                        <td>José Pérez</td>
+                        <td>Inactiva</td>
+                        <td>22/03/2023</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>ana.martinez@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Ana</td>
-                        <td>Martínez</td>
+                        <td>T-004-2023</td>
+                        <td>Laura Díaz</td>
+                        <td>Activa</td>
+                        <td>05/04/2023</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>luis.rodriguez@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Luis</td>
-                        <td>Rodríguez</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>sofia.hernandez@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Sofía</td>
-                        <td>Hernández</td>
+                        <td>T-005-2023</td>
+                        <td>Andrés Martínez</td>
+                        <td>Activa</td>
+                        <td>12/04/2023</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
@@ -191,6 +181,7 @@
             </table>
         </div>
     </section>
+
     <script src="menu.js"></script>
 </body>
 
