--- a/estudiantes.html
+++ b/estudiantes.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Menu</title>
+    <title>Estudiantes</title>
     <link rel="stylesheet" href="panel.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -29,13 +29,13 @@
             </div>
             <ul class="mobile-menu-items">
                 <li>
-                    <a class="active" href="panel.html">
+                    <a href="panel.html">
                         <i class='bx bx-group'></i>
                         <span>Usuarios</span>
                     </a>
                 </li>
                 <li>
-                    <a href="estudiantes.html">
+                    <a class="active" href="estudiantes.html">
                         <i class='bx bx-user-pin'></i>
                         <span>Estudiantes</span>
                     </a>
@@ -74,14 +74,14 @@
         </div>
         <ul class="nav-list">
             <li>
-                <a class="active" href="panel.html">
+                <a href="panel.html">
                     <i class='bx bx-group'></i>
                     <span class="links_name">Usuarios</span>
                 </a>
                 <span class="tooltip">Usuarios</span>
             </li>
             <li>
-                <a href="estudiantes.html">
+                <a class="active" href="estudiantes.html">
                     <i class='bx bx-user-pin'></i>
                     <span class="links_name">Estudiantes</span>
                 </a>
@@ -113,76 +113,66 @@
         </ul>
     </div>
     <section class="home-section">
-        <div class="text">Usuarios</div>
+        <div class="text">Estudiantes</div>
         <div class="table-container">
             <table class="user-table">
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Correo Electrónico</th>
-                        <th>Contraseña</th>
+                        <th>Cédula</th>
                         <th>Nombre</th>
                         <th>Apellido</th>
+                        <th>Carrera</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>admin@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Juan</td>
-                        <td>Pérez</td>
+                        <td>V-12345678</td>
+                        <td>Carlos</td>
+                        <td>Rodríguez</td>
+                        <td>Ingeniería Informática</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>maria.garcia@ejemplo.com</td>
-                        <td>••••••••</td>
+                        <td>V-23456789</td>
                         <td>María</td>
-                        <td>García</td>
+                        <td>González</td>
+                        <td>Ingeniería Civil</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>carlos.lopez@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Carlos</td>
-                        <td>López</td>
+                        <td>V-34567890</td>
+                        <td>José</td>
+                        <td>Pérez</td>
+                        <td>Arquitectura</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>ana.martinez@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Ana</td>
-                        <td>Martínez</td>
+                        <td>V-45678901</td>
+                        <td>Laura</td>
+                        <td>Díaz</td>
+                        <td>Medicina</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>luis.rodriguez@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Luis</td>
-                        <td>Rodríguez</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>sofia.hernandez@ejemplo.com</td>
-                        <td>••••••••</td>
-                        <td>Sofía</td>
-                        <td>Hernández</td>
+                        <td>V-56789012</td>
+                        <td>Andrés</td>
+                        <td>Martínez</td>
+                        <td>Derecho</td>
                         <td>
                             <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
                         </td>
@@ -191,6 +181,7 @@
             </table>
         </div>
     </section>
+
     <script src="menu.js"></script>
 </body>
 
