--- a/registros.html
+++ b/registros.html
@@ -12,10 +12,7 @@
 </head>
 
 <body>
-    <!-- Mobile Menu Button -->
-    <button class="mobile-menu-button">
-        <i class='bx bx-menu'></i> Menu
-    </button>
+    <!-- El botón de menú ha sido eliminado, ahora se usa deslizamiento del dedo -->
 
     <!-- Mobile Menu -->
     <div class="mobile-menu">
