--- a/estudiantes.html
+++ b/estudiantes.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <!-- Created by CodingLab |www.youtube.com/CodingLabYT-->
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
     <title>Estudiantes</title>
     <link rel="stylesheet" href="panel.css">
+    <link rel="stylesheet" href="panel_acordeon.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,75 +112,220 @@
     </div>
     <section class="home-section">
         <div class="text">Estudiantes</div>
-        <div class="table-container">
-            <table class="user-table">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Cédula</th>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Carrera</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>V-12345678</td>
-                        <td>Carlos</td>
-                        <td>Rodríguez</td>
-                        <td>Ingeniería Informática</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>V-23456789</td>
-                        <td>María</td>
-                        <td>González</td>
-                        <td>Ingeniería Civil</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>V-34567890</td>
-                        <td>José</td>
-                        <td>Pérez</td>
-                        <td>Arquitectura</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>V-45678901</td>
-                        <td>Laura</td>
-                        <td>Díaz</td>
-                        <td>Medicina</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>V-56789012</td>
-                        <td>Andrés</td>
-                        <td>Martínez</td>
-                        <td>Derecho</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+
+        <div class="accordion-container">
+            <div class="accordion-filters">
+                <button class="filter-button active">Todos</button>
+                <button class="filter-button">Informática</button>
+                <button class="filter-button">Civil</button>
+                <button class="filter-button">Otros</button>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">Carlos Rodríguez</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-edit-btn"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Cédula:</div>
+                                <div class="data-value">V-12345678</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Nombre:</div>
+                                <div class="data-value">Carlos</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Apellido:</div>
+                                <div class="data-value">Rodríguez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Carrera:</div>
+                                <div class="data-value">Ingeniería Informática</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">María González</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-edit-btn"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Cédula:</div>
+                                <div class="data-value">V-23456789</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Nombre:</div>
+                                <div class="data-value">María</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Apellido:</div>
+                                <div class="data-value">González</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Carrera:</div>
+                                <div class="data-value">Ingeniería Civil</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">José Pérez</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-edit-btn"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Cédula:</div>
+                                <div class="data-value">V-34567890</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Nombre:</div>
+                                <div class="data-value">José</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Apellido:</div>
+                                <div class="data-value">Pérez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Carrera:</div>
+                                <div class="data-value">Arquitectura</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">Laura Díaz</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-edit-btn"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Cédula:</div>
+                                <div class="data-value">V-45678901</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Nombre:</div>
+                                <div class="data-value">Laura</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Apellido:</div>
+                                <div class="data-value">Díaz</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Carrera:</div>
+                                <div class="data-value">Medicina</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">Andrés Martínez</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-edit-btn"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Cédula:</div>
+                                <div class="data-value">V-56789012</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Nombre:</div>
+                                <div class="data-value">Andrés</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Apellido:</div>
+                                <div class="data-value">Martínez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Carrera:</div>
+                                <div class="data-value">Derecho</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
     <script src="menu.js"></script>
+    <script>
+        // Acordeón
+        document.querySelectorAll('.accordion-toggle').forEach(button => {
+            button.addEventListener('click', () => {
+                const accordionItem = button.closest('.accordion-item');
+
+                // Cerrar otros items
+                document.querySelectorAll('.accordion-item').forEach(item => {
+                    if (item !== accordionItem) {
+                        item.classList.remove('active');
+                        const otherContent = item.querySelector('.accordion-content');
+                        otherContent.style.maxHeight = null;
+                        item.querySelector('.accordion-toggle').innerHTML = '<i class="bx bx-chevron-down"></i>';
+                    }
+                });
+
+                // Abrir/cerrar el item actual
+                accordionItem.classList.toggle('active');
+                const content = accordionItem.querySelector('.accordion-content');
+
+                if (accordionItem.classList.contains('active')) {
+                    content.style.maxHeight = content.scrollHeight + "px";
+                    button.innerHTML = '<i class="bx bx-chevron-up"></i>';
+                } else {
+                    content.style.maxHeight = null;
+                    button.innerHTML = '<i class="bx bx-chevron-down"></i>';
+                }
+            });
+        });
+
+        // Filtros (solo para demostración)
+        document.querySelectorAll('.filter-button').forEach(button => {
+            button.addEventListener('click', () => {
+                document.querySelectorAll('.filter-button').forEach(btn => {
+                    btn.classList.remove('active');
+                });
+                button.classList.add('active');
+            });
+        });
+    </script>
 </body>
 
 </html>
