--- a/registros.html
+++ b/registros.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <!-- Created by CodingLab |www.youtube.com/CodingLabYT-->
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
     <title>Registros</title>
     <link rel="stylesheet" href="panel.css">
+    <link rel="stylesheet" href="panel_acordeon.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,73 +112,270 @@
     </div>
     <section class="home-section">
         <div class="text">Registros</div>
-        <div class="table-container">
-            <table class="user-table">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Estudiante</th>
-                        <th>Tarjeta</th>
-                        <th>Fecha</th>
-                        <th>Hora</th>
-                        <th>Tipo</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Carlos Rodríguez</td>
-                        <td>T-001-2023</td>
-                        <td>15/04/2023</td>
-                        <td>08:15:22</td>
-                        <td>Entrada</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Carlos Rodríguez</td>
-                        <td>T-001-2023</td>
-                        <td>15/04/2023</td>
-                        <td>14:30:45</td>
-                        <td>Salida</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>María González</td>
-                        <td>T-002-2023</td>
-                        <td>15/04/2023</td>
-                        <td>09:05:12</td>
-                        <td>Entrada</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>María González</td>
-                        <td>T-002-2023</td>
-                        <td>15/04/2023</td>
-                        <td>15:45:33</td>
-                        <td>Salida</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>José Pérez</td>
-                        <td>T-003-2023</td>
-                        <td>15/04/2023</td>
-                        <td>08:45:18</td>
-                        <td>Entrada</td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>José Pérez</td>
-                        <td>T-003-2023</td>
-                        <td>15/04/2023</td>
-                        <td>16:20:05</td>
-                        <td>Salida</td>
-                    </tr>
-                </tbody>
-            </table>
+
+        <div class="accordion-container">
+            <div class="accordion-filters">
+                <button class="filter-button active">Todos</button>
+                <button class="filter-button">Entradas</button>
+                <button class="filter-button">Salidas</button>
+                <button class="filter-button">Hoy</button>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">Carlos Rodríguez - Entrada</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">Carlos Rodríguez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tarjeta:</div>
+                                <div class="data-value">T-001-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha:</div>
+                                <div class="data-value">15/04/2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Hora:</div>
+                                <div class="data-value">08:15:22</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tipo:</div>
+                                <div class="data-value">Entrada</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">Carlos Rodríguez - Salida</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">Carlos Rodríguez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tarjeta:</div>
+                                <div class="data-value">T-001-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha:</div>
+                                <div class="data-value">15/04/2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Hora:</div>
+                                <div class="data-value">14:30:45</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tipo:</div>
+                                <div class="data-value">Salida</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">María González - Entrada</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">María González</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tarjeta:</div>
+                                <div class="data-value">T-002-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha:</div>
+                                <div class="data-value">15/04/2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Hora:</div>
+                                <div class="data-value">09:05:12</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tipo:</div>
+                                <div class="data-value">Entrada</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">María González - Salida</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">María González</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tarjeta:</div>
+                                <div class="data-value">T-002-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha:</div>
+                                <div class="data-value">15/04/2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Hora:</div>
+                                <div class="data-value">15:45:33</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tipo:</div>
+                                <div class="data-value">Salida</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">José Pérez - Entrada</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">José Pérez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tarjeta:</div>
+                                <div class="data-value">T-003-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha:</div>
+                                <div class="data-value">15/04/2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Hora:</div>
+                                <div class="data-value">08:45:18</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tipo:</div>
+                                <div class="data-value">Entrada</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">José Pérez - Salida</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">José Pérez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tarjeta:</div>
+                                <div class="data-value">T-003-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha:</div>
+                                <div class="data-value">15/04/2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Hora:</div>
+                                <div class="data-value">16:20:05</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Tipo:</div>
+                                <div class="data-value">Salida</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
     <script src="menu.js"></script>
+    <script>
+        // Acordeón
+        document.querySelectorAll('.accordion-toggle').forEach(button => {
+            button.addEventListener('click', () => {
+                const accordionItem = button.closest('.accordion-item');
+
+                // Cerrar otros items
+                document.querySelectorAll('.accordion-item').forEach(item => {
+                    if (item !== accordionItem) {
+                        item.classList.remove('active');
+                        const otherContent = item.querySelector('.accordion-content');
+                        otherContent.style.maxHeight = null;
+                        item.querySelector('.accordion-toggle').innerHTML = '<i class="bx bx-chevron-down"></i>';
+                    }
+                });
+
+                // Abrir/cerrar el item actual
+                accordionItem.classList.toggle('active');
+                const content = accordionItem.querySelector('.accordion-content');
+
+                if (accordionItem.classList.contains('active')) {
+                    content.style.maxHeight = content.scrollHeight + "px";
+                    button.innerHTML = '<i class="bx bx-chevron-up"></i>';
+                } else {
+                    content.style.maxHeight = null;
+                    button.innerHTML = '<i class="bx bx-chevron-down"></i>';
+                }
+            });
+        });
+
+        // Filtros (solo para demostración)
+        document.querySelectorAll('.filter-button').forEach(button => {
+            button.addEventListener('click', () => {
+                document.querySelectorAll('.filter-button').forEach(btn => {
+                    btn.classList.remove('active');
+                });
+                button.classList.add('active');
+            });
+        });
+    </script>
 </body>
 
 </html>
