--- a/tarjetas.html
+++ b/tarjetas.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <!-- Created by CodingLab |www.youtube.com/CodingLabYT-->
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
     <title>Tarjetas</title>
     <link rel="stylesheet" href="panel.css">
+    <link rel="stylesheet" href="panel_acordeon.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,75 +112,239 @@
     </div>
     <section class="home-section">
         <div class="text">Tarjetas</div>
-        <div class="table-container">
-            <table class="user-table">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Número de Tarjeta</th>
-                        <th>Estudiante</th>
-                        <th>Estado</th>
-                        <th>Fecha de Emisión</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>T-001-2023</td>
-                        <td>Carlos Rodríguez</td>
-                        <td>Activa</td>
-                        <td>01/03/2023</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>T-002-2023</td>
-                        <td>María González</td>
-                        <td>Activa</td>
-                        <td>15/03/2023</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>T-003-2023</td>
-                        <td>José Pérez</td>
-                        <td>Inactiva</td>
-                        <td>22/03/2023</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>T-004-2023</td>
-                        <td>Laura Díaz</td>
-                        <td>Activa</td>
-                        <td>05/04/2023</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>T-005-2023</td>
-                        <td>Andrés Martínez</td>
-                        <td>Activa</td>
-                        <td>12/04/2023</td>
-                        <td>
-                            <button class="action-btn">Editar <i class="bx bx-pencil"></i></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+
+        <div class="accordion-container">
+            <div class="accordion-filters">
+                <button class="filter-button active">Todas</button>
+                <button class="filter-button">Activas</button>
+                <button class="filter-button">Inactivas</button>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">Carlos Rodríguez</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <div class="status-container status-active-container" title="Esta tarjeta está activa y puede ser utilizada">
+                                <span class="status-indicator status-active"></span>
+                                <span>Activa</span>
+                            </div>
+                            <button class="accordion-edit-btn" title="Editar tarjeta"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle" title="Ver detalles"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Número:</div>
+                                <div class="data-value">T-001-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">Carlos Rodríguez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estado:</div>
+                                <div class="data-value">Activa</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha de Emisión:</div>
+                                <div class="data-value">01/03/2023</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">María González</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <div class="status-container status-active-container" title="Esta tarjeta está activa y puede ser utilizada">
+                                <span class="status-indicator status-active"></span>
+                                <span>Activa</span>
+                            </div>
+                            <button class="accordion-edit-btn" title="Editar tarjeta"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle" title="Ver detalles"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Número:</div>
+                                <div class="data-value">T-002-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">María González</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estado:</div>
+                                <div class="data-value">Activa</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha de Emisión:</div>
+                                <div class="data-value">15/03/2023</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">José Pérez</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <div class="status-container status-inactive-container" title="Esta tarjeta está inactiva y no puede ser utilizada">
+                                <span class="status-indicator status-inactive"></span>
+                                <span>Inactiva</span>
+                            </div>
+                            <button class="accordion-edit-btn" title="Editar tarjeta"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle" title="Ver detalles"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Número:</div>
+                                <div class="data-value">T-003-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">José Pérez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estado:</div>
+                                <div class="data-value">Inactiva</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha de Emisión:</div>
+                                <div class="data-value">22/03/2023</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">Laura Díaz</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <div class="status-container status-active-container" title="Esta tarjeta está activa y puede ser utilizada">
+                                <span class="status-indicator status-active"></span>
+                                <span>Activa</span>
+                            </div>
+                            <button class="accordion-edit-btn" title="Editar tarjeta"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle" title="Ver detalles"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Número:</div>
+                                <div class="data-value">T-004-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">Laura Díaz</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estado:</div>
+                                <div class="data-value">Activa</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha de Emisión:</div>
+                                <div class="data-value">05/04/2023</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <div class="accordion-title">
+                            <span class="user-name">Andrés Martínez</span>
+                        </div>
+                        <div class="accordion-actions">
+                            <div class="status-container status-active-container" title="Esta tarjeta está activa y puede ser utilizada">
+                                <span class="status-indicator status-active"></span>
+                                <span>Activa</span>
+                            </div>
+                            <button class="accordion-edit-btn" title="Editar tarjeta"><i class='bx bx-pencil'></i></button>
+                            <button class="accordion-toggle" title="Ver detalles"><i class='bx bx-chevron-down'></i></button>
+                        </div>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="user-data-grid">
+                            <div class="user-data-item">
+                                <div class="data-label">Número:</div>
+                                <div class="data-value">T-005-2023</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estudiante:</div>
+                                <div class="data-value">Andrés Martínez</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Estado:</div>
+                                <div class="data-value">Activa</div>
+                            </div>
+                            <div class="user-data-item">
+                                <div class="data-label">Fecha de Emisión:</div>
+                                <div class="data-value">12/04/2023</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
     <script src="menu.js"></script>
+    <script>
+        // Acordeón
+        document.querySelectorAll('.accordion-toggle').forEach(button => {
+            button.addEventListener('click', () => {
+                const accordionItem = button.closest('.accordion-item');
+
+                // Cerrar otros items
+                document.querySelectorAll('.accordion-item').forEach(item => {
+                    if (item !== accordionItem) {
+                        item.classList.remove('active');
+                        const otherContent = item.querySelector('.accordion-content');
+                        otherContent.style.maxHeight = null;
+                        item.querySelector('.accordion-toggle').innerHTML = '<i class="bx bx-chevron-down"></i>';
+                    }
+                });
+
+                // Abrir/cerrar el item actual
+                accordionItem.classList.toggle('active');
+                const content = accordionItem.querySelector('.accordion-content');
+
+                if (accordionItem.classList.contains('active')) {
+                    content.style.maxHeight = content.scrollHeight + "px";
+                    button.innerHTML = '<i class="bx bx-chevron-up"></i>';
+                } else {
+                    content.style.maxHeight = null;
+                    button.innerHTML = '<i class="bx bx-chevron-down"></i>';
+                }
+            });
+        });
+
+        // Filtros (solo para demostración)
+        document.querySelectorAll('.filter-button').forEach(button => {
+            button.addEventListener('click', () => {
+                document.querySelectorAll('.filter-button').forEach(btn => {
+                    btn.classList.remove('active');
+                });
+                button.classList.add('active');
+            });
+        });
+    </script>
 </body>
 
 </html>
